--- a/gb/nf3046_9.md
+++ b/gb/nf3046_9.md
@@ -1,4 +1,16 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://github.com/1992513/www/blob/master/README.md?ivmwwfr#1" target="_blank">首页</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/1?rvnfb" target="_blank">动态网</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/2?ubkjbqp" target="_blank">大纪元</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/4?dmccys" target="_blank">看中国</a> | <a href="https://di88ceki78g29.cloudfront.net/pHh5q?wygnpspri" target="_blank">新生网</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/tktpt?yjbula" target="_blank">阿波罗网</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/Mjpvu?byipidu" target="_blank">干净世界</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/10?xrwtvfr" target="_blank">退党服务</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/Rffqf?tjpgz" target="_blank">明慧广播</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/nw9Vn?socycb" target="_blank">传奇时代</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/AF9AG?mosdlj" target="_blank">新境界影视</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/zqMQA?osccnisft" target="_blank">文昭谈论</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/7?wujunmdh" target="_blank">明慧</a></p><p><a href="https://dgk92ykceobaf.cloudfront.net/9?ekrgmrde" target="_blank">大法</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/3?zedjlyt" target="_blank">新唐人</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/obAhT?eniys" target="_blank">人民报</a> | <a href="https://dep6yudto3kbo.cloudfront.net/xXNHu?gpgkawhx" target="_blank">放光明</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/5?zteketki" target="_blank">新纪元</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/6?xtamy" target="_blank">希望之声</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/11?lsbvu" target="_blank">无界网络</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/Pueji?idpdfapsq" target="_blank">追查国际</a> | <a href="https://d1fejrztdgsube.cloudfront.net/16?pilxmmfno" target="_blank">明慧之窗</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/LdvzZ?rtcuzb" target="_blank">细语人生</a> | <a href="https://dfxrfb9070id6.cloudfront.net/fBn3r?yddhcu" target="_blank">新世纪影视</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/PUWMb?rgjlm" target="_blank">江峰时刻</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/8?lzmgrv" target="_blank">正见</a></p></td></tr><tr><td width="742"><h3><p><strong>九评和退党</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://github.com/1992513/www/blob/master/README.md?kextbvdwt#1" target="_blank">首页</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/1?yigpg" target="_blank">动态网</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/2?xkgcrs" target="_blank">大纪元</a> | <a href="https://dlp02mn13eakq.cloudfront.net/4?fjelbpcz" target="_blank">看中国</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/pHh5q?ylqqejpmu" target="_blank">新生网</a> | <a href="https://d3abchfok6e2j.cloudfront.net/tktpt?vugplyfae" target="_blank">阿波罗网</a> | <a href="https://d21y52w6f35pla.cloudfront.net/Mjpvu?hpwkqg" target="_blank">干净世界</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/10?juvkguxk" target="_blank">退党服务</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/Rffqf?anxdigqe" target="_blank">明慧广播</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/nw9Vn?xhotbqppq" target="_blank">传奇时代</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/AF9AG?yqqqw" target="_blank">新境界影视</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/zqMQA?uojaizg" target="_blank">文昭谈论</a> | <a href="https://db8nk66phkh66.cloudfront.net/7?pomlvamwp" target="_blank">明慧</a></p><p><a href="https://d26c5rnrr5nvsd.cloudfront.net/9?uxtrgpldl" target="_blank">大法</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/3?cxisexr" target="_blank">新唐人</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/obAhT?zdiecsstc" target="_blank">人民报</a> | <a href="https://d2oemtubh889hy.cloudfront.net/xXNHu?xvjhi" target="_blank">放光明</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/5?sgnfv" target="_blank">新纪元</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/6?cshtwrrcr" target="_blank">希望之声</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/11?ioutpfl" target="_blank">无界网络</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/Pueji?jsxbmgy" target="_blank">追查国际</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/16?zijdrxmrs" target="_blank">明慧之窗</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/LdvzZ?uyrwvejw" target="_blank">细语人生</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/fBn3r?ovqwiw" target="_blank">新世纪影视</a> | <a href="https://d1u99il8548gs4.cloudfront.net/PUWMb?eayhjuxs" target="_blank">江峰时刻</a> | <a href="https://d1lulvfep8g527.cloudfront.net/8?wafxews" target="_blank">正见</a></p></td></tr><tr><td width="742"><h3><p><strong>九评和退党</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://d3oq52niifoer7.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126733.md#1" target="_blank">王友群：文革中挨整死得最惨的大将许光达</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126733.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/11/id14126736-1511012105372382-600x400-1-150x120.jpeg" align ="left"></a>1969年6月3日晚10时20分，中共大将、装甲兵司令员、国防部副部长、中央委员许光达，惨死在病房厕所的马桶上，死因至今不明。
+
+1975年6月3日晚，得知中央军委给许光达平反的消息后，当年负责看管许光达的警卫连连长罗治芬，在家中上吊身亡。
+
+或许，许光达之死，与罗治芬的不法行动有直接关联。
+许光达生前挨整有多惨？
+据曾在中共军队总政治部工作过的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月30日 8:56 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/28/n14125935.md#1" target="_blank">王友群：公安部长王小洪正站在悬崖边上</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/28/n14125935.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/11/id14125936-8315bb39c24e88de5bc0ecfb6d1751e1-800x450-600x400-150x120.jpeg" align ="left"></a>中共迫害法轮功已经24年，不仅没能打倒法轮功，相反，法轮功洪传到了全球一百一十多个国家和地区。
+
+为什么？因为法轮功不是一般的气功，而是佛法。
+从1999年7月20日江泽民发动迫害法轮功至今，全世界法轮功学员，日复一日，月复一月，年复一年，和平、理性地向世人讲述“法轮大法好、真善忍好”的真相，讲了24年。
+中国大陆许多人明白真相后，选择不再参与迫害佛.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月29日 12:59 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/27/n14125233.md#1" target="_blank">李中泠：中国人失去希望 未来出路在何方？</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/27/n14125233.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/07/id14029960-2023-07-06_200730-150x120.jpg" align ="left"></a>近几年，中国社会的情势变化很大。近日一篇网友的微博文章引起关注，他表示，从2019年开始，大家基本上都在现实生活里变得越来越颓丧，感受到向上流动的机会开始变少。中共“体制内”的铁饭碗似乎也越来越靠不住，奖金、绩效、人才补贴，少发、漏发甚至直接不发的越来越多。还有缩编，也叫“减员增效”，直接就是裁员了。所谓的“上岸”（考上编制），也不代表一辈子能待在岸上，而是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月28日 4:17 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122889.md#1" target="_blank">王友群：这只“政法虎”是如何“养”成的？</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122889.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/11/id14122892-333ea8d14f5d4a323ffc8eaaf798cbb5--150x120.png" align ="left"></a>2023年至今，被押上审判台的“政法虎”中，原辽宁省副省长、公安厅长王大伟，是被公布受贿金额最多的，达5.55亿元。
 
@@ -53,8 +65,7 @@
 
 中共官方讲，李克强发病后，被紧急送往上海中医药大学附属曙光医院抢救，却没有送到救治心血管疾病非常有名的复旦大学附属中山医院。
 .........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月12日 3:06 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113663.md#1" target="_blank">刘清：留美博士生看清中共邪教本质 坚决三退</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113663.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/11/id14113686-2310151433091973-150x120.jpeg" align ="left"></a>“在美国留学期间，我逐渐接受了普世价值，即自由民主的思想，同时了解了共产邪党的邪恶与荒诞。当我重新审视中国共产党的党章和其执政至今的种种行为后，我认为我不再信仰共产主义。”11月8日，一位署名为“庞永新”的中国民众，在其“三退”声明中这样说。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月10日 4:31 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/7/n14111521.md#1" target="_blank">《九评》问世19年 4.2亿人退出中共党团队</a><br></h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/7/n14111521.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2023/11/id14113064-2310151433281973-150x120.jpg" align ="left"></a>《九评共产党》系列文章即将问世19周年，自2004年11月19日发表以来，海内外掀起退出中共党、团、队组织的“三退”大潮，至今已超过4.2亿中国人“三退”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月10日 7:24 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126132.md#1" target="_blank">三退声明精选（2023/11/28）</a><br></h3>作为一个学生，在校读书三年，眼睁睁看着村里的住宅被强拆，父母亲流离失所，家里也早被重新买房的房贷压垮。我不知道这是为什么，总觉得有人在欺压我们这些老百姓，直到今天在朋友引荐下观看了《四亿人的觉醒》我才恍然大悟，中共党满口假话残暴血腥，说着为人民实际上对我们老百姓割肉放血，终于是看透了中共暴政的邪恶特性，我为此退出共青团，总觉得加入这种造孽的组织是会遭报应的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月29日 10:42 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/27/n14124796.md#1" target="_blank">三退声明精选（2023/11/26）</a><br></h3>我们姐弟二人，完全认识到中国共产党是中国人民苦难深重的根源，过去的74年，中国人被迫害，洗脑，被剥夺言论、集会及宗教信仰等自由，共产党是万恶之源。值此之际，我们声明退出曾加入的中国少年先锋队和中国共青团，与邪恶的中共彻底划清界限。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月27日 10:44 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122935.md#1" target="_blank">三退声明精选（2023/11/23）</a><br></h3>中国共产党就是假、骗、偷！他们无恶不做、贪污腐败、满口谎言、邪恶至极！所以我们声明退党、退团、退队，退出共产党及其它组织，退出这个邪恶的组织！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月24日 8:05 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122545.md#1" target="_blank">传单：传真天地（第120期）</a><br></h3>11月14日，中共党魁抵达旧金山当天，抗议人士租用了一架小型飞机，拉着“终结共产党，自由中国、自由香港、自由西藏、自由维吾尔”的巨型横幅，在旧金山上空飞行抗议。在中共党魁入住的酒店，也能看到空中飘过巨大的“终结共产党”的横幅。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月23日 11:00 PM							</td></tr>
@@ -63,18 +74,5 @@
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/16/n14117934.md#1" target="_blank">传单：传真天地（第119期）</a><br></h3>继黑龙江省富锦市出现“雷打雪”后，11月11日清晨，西安民众听到阵阵雷声，很多人“被巨响惊醒”，天空中降下了鹅毛大雪。一直以来，民间流传着各种谚语，“冬季打雷，黄土堆”“天冬雷，地必震”“雷打冬，十个牛栏九个空”。人们认为冬天打雷是一种“不祥”的征兆，预示着“天灾”或是“人祸”出现。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月16日 10:37 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/15/n14116648.md#1" target="_blank">三退声明精选（2023/11/14）</a><br></h3>我是研究历史的，共产党把中国社会搞的人心败坏 道德沦丧。历史上的中国也是一个诗书礼乐、儒家文化的道德社会，从皇帝大臣到黎民百姓都敬天信佛。历史上很多暴君、昏君都不得善终，要不是被农民起义推翻，就是死于宫廷政变 或者天谴疾病。中国历史上改朝换代很多，共产党政权也会像古代暴政王朝一样被推翻。以后中国社会肯定会出现像刘邦、赵匡胤、朱元璋那样的真龙天子改朝换代。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月15日 11:22 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115222.md#1" target="_blank">三退声明精选（2023/11/12）</a><br></h3>这是一个充满着暴力、暴政和谎言的世界，人民生不如死，不管百姓死活，司法系统的严重腐败。对这个国家失望至极。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月13日 10:36 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113442.md#1" target="_blank">参考资料：纵观天下（2023年11月传单/传真）</a><br></h3>纵观天下2023.11月份目录：
-
-4.2亿人三退 中共统治的末日钟声
-抬出马克思和孔子 啥目的
-《四亿人的觉醒》
-器官移植草案 将活摘合法化
-震撼律师心灵的故事
-音乐人患白肺命危 诚念九字起死回生
-
-点击下载打印PDF档
-
-点击下载手机PDF档   
-责任编辑：李梅......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2023年11月10日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/1992513/djy/blob/master/gb/nf3046_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/1992513/djy/blob/master/gb/nf3046_10.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf3046_9.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf3046_9.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf3046_9.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_9.htm">https://www.epochtimes.com/gb/nf3046_9.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
